extension AccessibilityIdentifier {
    enum ManualPlace {
        static let latitudeField = "manual_place_latitude_field"
        static let longitudeField = "manual_place_longitude_field"
        static let openWikipediaButton = "manual_place_open_wikipedia_button"
    }
}
