extension AccessibilityIdentifier {
    enum Common {
        static let errorRetry = "common_error_retry"
        static let toast = "common_toast"
        static let toastDismiss = "common_toast_dismiss"
    }
}
